# SJG_LMS_GUI

./: .gitignore  base_logger.py  load_save_data.py  main.py  pyproject.toml  pyrightconfig.json  qrtoimg.py  requirements.txt  testing_file.py  todo.md
.streamlit/: pages.toml
docs/: main.html
docs/gui/: index.html  services.html
docs/gui/components/: header.html  index.html
docs/gui/pages/: crud_page.html  index.html  main_page.html
docs/lmsapi/: book.html  connection_client.html  context_api.html  data_client.html  index.html  lend_client.html  lend_model.html  misc.html  sheet_names.html  worksheet_client.html
generated_qr_images/: könyv_matrica_2025_09_11_14_21_11.docx
gui/: services.py
gui/components/: header.py  translation.py
gui/pages/: add_book.py  add_book_page.py  book_return_page.py  crud_page.py  info_page.py  main_page.py  qr_page.py
gui/static/: info_text.md
legacy/: app.py  credentials.json  load_save_data.py  main.py  modal.py  qrtoimg.py
legacy/pages/: 1_Köny_hozzáadás.py  2_Könyv_adatainak_szerkesztése.py  3_Könyv_kiadás.py  4_QR-kód_nyomtatás.py
lmsapi/: __init__.py  book.py  client.py  connection_client.py  context_api.py  credentials.json  data_client.py  lend_client.py  lend_model.py  misc.py  secrets.json  sheet_names.py  worksheet_client.py
pages/: 1_Köny_hozzáadás.py  2_Könyv_adatainak_szerkesztése.py  3_Könyv_kiadás.py  4_QR-kód_nyomtatás.py
qr_generator/: __init__.py  qr_book_model.py  qr_generator.py
tests/: test_lmsapi.py
